--- a/Report/project.bib
+++ b/Report/project.bib
@@ -294,6 +294,13 @@
   howpublished = "https://github.com/metagol/metagol",
   URL = "https://github.com/metagol/metagol"
 }
+@misc {Sancho/Github,
+  author = {Steve Draper, Andrew Rose},
+  title = {Sancho GGP Player},
+  year = {2015},
+  howpublished = "https://github.com/SanchoGGP/ggp-base",
+  URL = "https://github.com/SanchoGGP/ggp-base"
+}
 @article{MarkLaw/ILASP2i,
   author    = {Mark Law and
                Alessandra Russo and
@@ -414,3 +421,48 @@ journal = {Mathematical Spectrum}
   biburl    = {https://dblp.org/rec/journals/ki/GebserKKLOORSSW18.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{DeepBlue,
+	author    = {Feng{-}Hsiung Hsu},
+	title     = {IBM's Deep Blue Chess grandmaster chips},
+	journal   = {{IEEE} Micro},
+	volume    = {19},
+	number    = {2},
+	pages     = {70--81},
+	year      = {1999},
+	url       = {https://doi.org/10.1109/40.755469},
+	doi       = {10.1109/40.755469},
+	timestamp = {Wed, 14 Nov 2018 10:14:02 +0100},
+	biburl    = {https://dblp.org/rec/journals/micro/Hsu99.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{SWIPL,
+	author    = {Jan Wielemaker and
+	Tom Schrijvers and
+	Markus Triska and
+	Torbj{\"{o}}rn Lager},
+	title     = {SWI-Prolog},
+	journal   = {CoRR},
+	volume    = {abs/1011.5332},
+	year      = {2010},
+	url       = {http://arxiv.org/abs/1011.5332},
+	archivePrefix = {arXiv},
+	eprint    = {1011.5332},
+	timestamp = {Mon, 13 Aug 2018 16:46:29 +0200},
+	biburl    = {https://dblp.org/rec/journals/corr/abs-1011-5332.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@book{Alice/Foundations,
+	author    = {Serge Abiteboul and
+	Richard Hull and
+	Victor Vianu},
+	title     = {Foundations of Databases},
+	publisher = {Addison-Wesley},
+	year      = {1995},
+	url       = {http://webdam.inria.fr/Alice/},
+	isbn      = {0-201-53771-0},
+	timestamp = {Sat, 11 Nov 2017 21:53:30 +0100},
+	biburl    = {https://dblp.org/rec/books/aw/AbiteboulHV95.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
