--- a/Report/project.tex
+++ b/Report/project.tex
@@ -7,6 +7,9 @@
 \usepackage{wrapfig}
 \usepackage{minted}
 \usepackage{mathrsfs}
+
+\usepackage{fancyvrb}
+
 \usepackage{pgfplots}
 \usepackage{mdframed}
 \usepackage{multirow}
